@@ -2,16 +2,17 @@ package com.smartcompare.recommendation.application;
 
 import com.smartcompare.favorite.application.FavoriteService;
 import com.smartcompare.favorite.domain.dto.FavoriteDTO;
-import com.smartcompare.favorite.infrastructure.FavoriteRepository;
-import com.smartcompare.product.domain.Product;
-import com.smartcompare.product.infrastructure.ProductRepository;
+import com.smartcompare.product.domain.dto.EbayProductDTO;
+import com.smartcompare.product.domain.dto.EbaySearchResponse;
+import com.smartcompare.product.infrastructure.EbayApiClient;
+import com.smartcompare.product.infrastructure.EbayOAuthService;
 import com.smartcompare.recommendation.domain.Recommendation;
 import com.smartcompare.recommendation.domain.dto.RecommendationDTO;
 import com.smartcompare.recommendation.domain.exception.RecommendationNotFoundException;
 import com.smartcompare.recommendation.infrastructure.RecommendationRepository;
 import com.smartcompare.searchhistory.application.SearchHistoryService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.data.domain.Page;
@@ -20,13 +21,15 @@ import org.springframework.data.domain.Pageable;
 import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class RecommendationService {
     private final RecommendationRepository recommendationRepository;
     private final FavoriteService favoriteService;
     private final SearchHistoryService searchHistoryService;
-    private final ProductRepository productRepository;
+    private final EbayOAuthService ebayOAuthService;
+    private final EbayApiClient ebayApiClient;
 
     @Transactional(readOnly = true)
     public RecommendationDTO findById(Long id) {
@@ -84,61 +87,98 @@ public class RecommendationService {
 
     @Transactional(readOnly = true)
     public List<RecommendationDTO> getRecommendations(Long userId) {
-        // 1. Obtener favoritos del usuario
-        List<FavoriteDTO> favorites = favoriteService.findByUserId(userId);
-        List<String> favoriteProductIds = favorites.stream()
-                .map(FavoriteDTO::getProductId)
-                .collect(Collectors.toList());
+        // 1) obtener token de eBay
+        String token = ebayOAuthService.getAppAccessToken();
 
-        // 2. Determinar semillas: categorías de favoritos o términos de búsqueda
-        List<String> seedCategories;
-        if (!favorites.isEmpty()) {
-            seedCategories = favorites.stream()
-                    .map(fav -> productRepository.findById(fav.getProductId())
-                            .map(Product::getPrimaryCategoryId)
-                            .orElse(null))
+        // 2) cargar favoritos y preparar exclusión
+        List<String> favIds = favoriteService.getFavoriteProductIds(userId);
+        Set<String> exclude = new HashSet<>(favIds);
+
+        // 3) resultados
+        List<RecommendationDTO> recs = new ArrayList<>();
+
+        // 4) si hay favoritos, intentar por categoría
+        if (!favIds.isEmpty()) {
+            // 4.1 extraer categorías no-nulas
+            List<FavoriteDTO> favDtos = favoriteService.findByUserId(userId);
+            List<String> categories = favDtos.stream()
+                    .map(FavoriteDTO::getPrimaryCategoryId)
                     .filter(Objects::nonNull)
                     .distinct()
-                    .collect(Collectors.toList());
-        } else {
-            seedCategories = searchHistoryService.findByUserId(userId).stream()
-                    .map(sh -> sh.getTerms())
-                    .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
+
+            // 4.2 si tenemos categorías, buscamos por categoría
+            if (!categories.isEmpty()) {
+                for (String catId : categories) {
+                    if (recs.size() >= 5) break;
+                    EbaySearchResponse resp = ebayApiClient.searchProductsByCategory(catId, 10, token);
+                    if (resp != null && resp.getItems() != null) {
+                        for (var item : resp.getItems()) {
+                            if (recs.size() >= 5) break;
+                            String id = item.getItemId();
+                            if (exclude.add(id)) {
+                                recs.add(buildDTO(userId, id, "Basado en tus favoritos"));
+                            }
+                        }
+                    }
+                }
+                return recs;  // devolvemos ya si vinieron por categoría
+            }
+
+            // 4.3 fallback: si NO hay categorías en tus favoritos,
+            //      vamos a tokenizar sus títulos y buscar por texto
+            for (FavoriteDTO fav : favDtos) {
+                if (recs.size() >= 5) break;
+                String title = fav.getTitle();
+                if (title == null) continue;
+                for (String tok : title.toLowerCase().split("\\s+")) {
+                    if (tok.length() < 4 || recs.size() >= 5) continue;
+                    EbaySearchResponse resp = ebayApiClient.searchProducts(tok, 10, token);
+                    if (resp != null && resp.getItems() != null) {
+                        for (var item : resp.getItems()) {
+                            if (recs.size() >= 5) break;
+                            String id = item.getItemId();
+                            if (exclude.add(id)) {
+                                recs.add(buildDTO(userId, id, "Basado en tus favoritos"));
+                            }
+                        }
+                    }
+                }
+            }
+            if (!recs.isEmpty()) {
+                return recs;
+            }
         }
 
-        // 3. Si no hay semillas, no hay recomendaciones
-        if (seedCategories.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        // 4. Preparar exclusión de productos ya favoritos
-        Set<String> excludeIds = new HashSet<>(favoriteProductIds);
-        List<RecommendationDTO> recommendations = new ArrayList<>();
-
-        // 5. Por cada categoría semilla, buscar hasta 5 ítems nuevos
-        for (String categoryId : seedCategories) {
-            if (recommendations.size() >= 5) break;
-            Pageable page = PageRequest.of(0, 5);
-            List<Product> similarProducts = productRepository
-                    .findByPrimaryCategoryIdAndIdNotIn(categoryId, new ArrayList<>(excludeIds), page);
-
-            for (Product p : similarProducts) {
-                if (recommendations.size() >= 5) break;
-                if (!excludeIds.contains(p.getId())) {
-                    recommendations.add(RecommendationDTO.builder()
-                            .userId(userId)
-                            .suggestedProductId(p.getId())
-                            .reason(!favorites.isEmpty()
-                                    ? "Basado en tus favoritos"
-                                    : "Basado en tu historial de búsqueda")
-                            .build());
-                    excludeIds.add(p.getId());
+        // 5) si no hay favoritos o no se obtuvo nada, usamos el historial
+        List<String> terms = searchHistoryService.getSearchHistoryTerms(userId);
+        for (String term : terms) {
+            if (recs.size() >= 5) break;
+            for (String tok : term.toLowerCase().split("\\s+")) {
+                if (tok.length() < 4 || recs.size() >= 5) continue;
+                EbaySearchResponse resp = ebayApiClient.searchProducts(tok, 10, token);
+                if (resp != null && resp.getItems() != null) {
+                    for (var item : resp.getItems()) {
+                        if (recs.size() >= 5) break;
+                        String id = item.getItemId();
+                        if (exclude.add(id)) {
+                            recs.add(buildDTO(userId, id, "Basado en tu historial de búsqueda"));
+                        }
+                    }
                 }
             }
         }
 
-        return recommendations;
+        // 6) si aún está vacío, devolvemos la lista vacía
+        return recs;
+    }
+
+    private RecommendationDTO buildDTO(Long userId, String prodId, String reason) {
+        return RecommendationDTO.builder()
+                .userId(userId)
+                .suggestedProductId(prodId)
+                .reason(reason)
+                .build();
     }
 }
 
